--- a/screen_1.css
+++ b/screen_1.css
@@ -1,48 +1,57 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: sans-serif;
     background-color: #f8f9fa;
     color: #333;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-header{
-    background-color: #ffffff;
-    
-    padding: 1em 0;
-    text-align: left;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    position: block; 
-    top: 0;
-    z-index: 1000;
-    
-    
-}
-img{
-    height: 130px;
-    
-}
-nav {
-    background-color: #343a40;
-    overflow: hidden;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    padding: 0;
+a{
+    text-decoration: none;
+    color: black;
 }
 
-nav a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    transition: background-color 0.3s;
+header{
+    display: flex;
+    min-height: 70px;
+    background-color: yellow;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
 }
-nav a:hover {
-    background-color: #495057;
+.logo{
+    display: flex;
+    align-items: center;
+
 }
+
+.logo img{
+    height: 50px;
+    margin-right: 10px;
+
+}
+
+nav a{
+    font-weight: 600;
+    padding-right: 10px;
+}
+
+nav a:hover{
+    color: wheat;
+}
+
+@media (max-width:700px){
+    header{
+        flex-direction: column;
+    }
+
+    nav{
+        padding:10px 0px;
+    }
+}
+
+
+
 .container {
     width: 90%;
     max-width: 1200px;
